[gd_scene load_steps=14 format=3 uid="uid://cin6suhd1iea4"]

[ext_resource type="Script" path="res://enemies/boss_enemy.gd" id="1_1wtw1"]
[ext_resource type="Texture2D" uid="uid://c6flfmmctho7" path="res://enemies/boss_enemy_body.png" id="2_no3l3"]
[ext_resource type="Texture2D" uid="uid://btyq0xc0cwaxe" path="res://enemies/boss_enemy_wing.png" id="3_x1o1f"]
[ext_resource type="Texture2D" uid="uid://bh3h2hlda1v5w" path="res://enemies/boss_enemy_head.png" id="4_rywgj"]
[ext_resource type="Texture2D" uid="uid://kueo3arpb73s" path="res://enemies/boss_enemy_leg.png" id="5_u5hoy"]
[ext_resource type="PackedScene" uid="uid://fh5bt4j74uhr" path="res://Collisions/hurt_box.tscn" id="6_x0123"]
[ext_resource type="PackedScene" uid="uid://cufv2er0s4ngx" path="res://Collisions/hit_box.tscn" id="7_k4606"]
[ext_resource type="PackedScene" uid="uid://bf7coyeg75jx1" path="res://stats.tscn" id="8_r8agj"]

[sub_resource type="Animation" id="Animation_5gjkd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/RightWing:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785397]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LeftWing:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785397]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/UpperLeftLeg:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LowerLeftLeg:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.523598]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/UpperLeftLeg2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/LowerLeftLeg2:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.523598]
}

[sub_resource type="Animation" id="Animation_o3kb6"]
resource_name = "fly"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 12), Vector2(0, 9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/RightWing:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.785397, 1.309]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/LeftWing:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.785397, -1.309]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/UpperLeftLeg:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.523598]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LowerLeftLeg:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.523598, -0.261799]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/UpperLeftLeg2:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.523598]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/LowerLeftLeg2:rotation")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.523598, 0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sym7x"]
_data = {
"RESET": SubResource("Animation_5gjkd"),
"fly": SubResource("Animation_o3kb6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_h4khm"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0hnfo"]
radius = 16.0

[node name="BossEnemy" type="Node2D"]
script = ExtResource("1_1wtw1")
acceleration = 150
max_speed = 700

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sym7x")
}

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(0, 12)
texture = ExtResource("2_no3l3")
offset = Vector2(-0.5, 0)

[node name="LeftWing" type="Sprite2D" parent="Body"]
show_behind_parent = true
position = Vector2(-8, -20)
rotation = 0.785397
texture = ExtResource("3_x1o1f")
offset = Vector2(-21, -4)

[node name="RightWing" type="Sprite2D" parent="Body"]
show_behind_parent = true
position = Vector2(8, -20)
rotation = -0.785397
texture = ExtResource("3_x1o1f")
offset = Vector2(21, -4)
flip_h = true

[node name="Head" type="Sprite2D" parent="Body"]
position = Vector2(0, -7)
texture = ExtResource("4_rywgj")

[node name="UpperLeftLeg" type="Sprite2D" parent="Body"]
show_behind_parent = true
position = Vector2(-12, -11)
texture = ExtResource("5_u5hoy")
offset = Vector2(-8, 8)

[node name="LowerLeftLeg" type="Sprite2D" parent="Body"]
position = Vector2(-10, -2)
rotation = -0.523598
texture = ExtResource("5_u5hoy")
offset = Vector2(-8, 8)

[node name="UpperLeftLeg2" type="Sprite2D" parent="Body"]
show_behind_parent = true
position = Vector2(12, -11)
texture = ExtResource("5_u5hoy")
offset = Vector2(8, 8)
flip_h = true

[node name="LowerLeftLeg2" type="Sprite2D" parent="Body"]
position = Vector2(11, -2)
rotation = 0.523598
texture = ExtResource("5_u5hoy")
offset = Vector2(8, 8)
flip_h = true

[node name="HurtBox" parent="Body" instance=ExtResource("6_x0123")]
position = Vector2(0, -12)
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HurtBox"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_h4khm")

[node name="HitBox" parent="Body" instance=ExtResource("7_k4606")]
position = Vector2(0, -12)
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HitBox"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_0hnfo")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body/HitBox"]
polygon = PackedVector2Array(-8, 20, -8, 13, 8, 13, 8, 21, 1, 33, -1, 33, -8, 21)

[node name="DeathEffectSpawn" type="Marker2D" parent="Body"]
position = Vector2(0, -4)

[node name="StingerPivot" type="Marker2D" parent="Body"]
position = Vector2(0, -4)

[node name="StingerMuzzle" type="Marker2D" parent="Body/StingerPivot"]
position = Vector2(18, 0)

[node name="Stats" parent="." instance=ExtResource("8_r8agj")]
max_health = 200

[node name="StingerTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="StateTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="hurt" from="Body/HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
